@@ -434,3 +434,7 @@
 2019-09-12 Fred Gleason <fredg@paravelsystems.com>
 	* Re-indented switch() statements in
 	'src/glassplayergui/segmeter.cpp'.
+2019-09-12 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in glassplayer(1) that caused it to emit invalid
+	JSON when invoked with '--metadata-out --json' on a stream
+	containing no metadata.
